<resources>
    <string name="app_name">CoinСalculator</string>
    <string name="title_Calculator">Calculator</string>
    <string name="title_CoinsList">Coins</string>
    <string name="title_Portfolio">Cryptocurrency Portfolio</string>
    <string name="coin_card">Coin card</string>
    <string name="instruction">To add an asset, go to the coins section</string>
    <string name="add_to_calculator">Add to calculator</string>
    <string name="remove_to_calculator">Remove to calculator</string>
    <string name="total_supply">Total supply</string>
    <string name="value">Value</string>
    <string name="name">Name</string>

    <string name="million"> M</string>
    <string name="billion"> B</string>
    <string name="trillion"> T</string>

    <string name="market_cap_rank">Market cap rank</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="max_supply">Max supply</string>
    <string name="market_cap">Market cap</string>
    <string name="total_volume">Total volume</string>
    <string name="range_for_24_hours">min/max 24h</string>
</resources>