<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.coinalculator.ui.calculator.presently.CalculatorFragment"
        android:label="@string/title_Calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.coinalculator.ui.coins.presently.list.CoinListFragment"
        android:label="@string/title_CoinsList"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.coinalculator.ui.favorite.presently.FavoriteFragment"
        android:label="@string/title_Portfolio"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_card"
        android:name="com.example.coinalculator.ui.coins.presently.card.CoinCardFragment"
        android:label="@string/coin_card"
        tools:layout="@layout/fragment_coin_card"
        />

    <action
        android:id="@+id/action_main_to_details"
        app:destination="@id/navigation_card"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        />
</navigation>